--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -8,7 +8,7 @@ RUN npm run build
 
 # Stage 2: Serve with Nginx
 FROM nginx:stable-alpine
-COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx/frontend.nginx.prod.conf /etc/nginx/nginx.conf
 COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
