--- a/frontend/nginx/frontend.nginx.prod.conf
+++ b/frontend/nginx/frontend.nginx.prod.conf
@@ -1,8 +1,27 @@
-server {
-    listen 3000;
-    root /usr/share/nginx/html;
+worker_processes 1;
 
-    location / {
-        try_files $uri /index.html;
+events {
+    worker_connections 128;
+}
+
+http {
+    include mime.types;
+    default_type application/octet-stream;
+
+    server {
+        root /usr/share/nginx/html;
+        listen 3000;
+        sendfile on;
+        tcp_nopush on;
+
+        # Serve static assets like images
+        location /assets/ {
+            try_files $uri =404;
+        }
+
+        # SPA fallback
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
     }
 }
