--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 jwt.secret=${JWT_SECRET}
-tpx.auth.url=http://host.docker.internal:7800/api/auth/verify-token
+tpx.auth.url=https://phantomphoenix.org/api/auth/verify-token
 
-ALLOWED_ORIGINS=http://localhost:5174
+ALLOWED_ORIGINS=https://phantomphoenix.org
 
 spring.web.resources.static-locations=file:../uploads/
 spring.servlet.multipart.max-file-size=50MB
