--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 jwt.secret=${JWT_SECRET}
-tpx.auth.url=http://phantomphoenix.org/api/auth/verify-token
+tpx.auth.url=https://phantomphoenix.org/api/auth/verify-token
 #tpx.auth.url=http://host.docker.internal:7800/api/auth/verify-token
 ALLOWED_ORIGINS=https://phantomphoenix.org
 
